# ansible-aap-api-client

./: Makefile  README.md  make.bat  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish-to-pypi.yml  test-coverage-lint.yml
ansible_aap_api_client/: __init__.py  aap_client.py  ansible_aap_api_client_cli.py  async_aap_client.py  async_inventory_management.py  async_job_management.py  base_connection.py  common_client_needs.py  enumerations.py  groups.py  hosts.py  inventories.py  inventory_management.py  job_management.py  jobs.py  organizations.py  schemas.py
ansible_aap_api_client/interfaces/: runable.py
containers/: Containerfile
docs/: conf.py  index.rst
docs/gh-pages/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/gh-pages/.doctrees/: environment.pickle  index.doctree
docs/gh-pages/.doctrees/source/: index.doctree
docs/gh-pages/.doctrees/source/cli/: cli-ref.doctree  index.doctree
docs/gh-pages/.doctrees/source/code/: ansible_aap_api_client.doctree  ansible_aap_api_client.interfaces.doctree  modules.doctree
docs/gh-pages/.doctrees/source/examples/: create-inventory.doctree  delete-inventory.doctree  index.doctree  run-job-template.doctree
docs/gh-pages/_modules/: index.html
docs/gh-pages/_modules/ansible_aap_api_client/: aap_client.html  ansible_aap_api_client_cli.html  async_aap_client.html  async_inventory_management.html  async_job_management.html  enumerations.html  groups.html  hosts.html  inventories.html  inventory_management.html  job_management.html  job_templates.html  jobs.html  organizations.html  schemas.html
docs/gh-pages/_modules/ansible_aap_api_client/interfaces/: runable.html
docs/gh-pages/_sources/: index.rst.txt
docs/gh-pages/_sources/source/code/: ansible_aap_api_client.rst.txt  modules.rst.txt
docs/gh-pages/source/: index.html
docs/gh-pages/source/cli/: cli-ref.html  index.html
docs/gh-pages/source/code/: ansible_aap_api_client.html  ansible_aap_api_client.interfaces.html  modules.html
docs/gh-pages/source/examples/: create-inventory.html  delete-inventory.html  index.html  run-job-template.html
docs/source/cli/: cli-ref.rst  index.rst
docs/source/code/: ansible_aap_api_client.interfaces.rst
docs/source/examples/: create-inventory.rst  index.rst
tests/: conftest.py  test_async_aap_client.py  test_async_inventory_management.py  test_async_job_management.py  test_groups.py  test_host.py  test_inventories.py  test_job_templates.py  test_jobs.py  test_organizations.py  test_schemas.py
tests/data/: README.md  added-group-to-inventory-response.json  added-host-to-group-response.json  added-host-to-inventory-response.json  created-inventory-response.json  created-organization-response.json  job-launch-response.json  job-stdout.txt  single-group-response.json  single-host-response.json  single-inventory-response.json  single-job-response.json  single-job-template-response.json  single-organization-response.json  two-group-response.json  two-host-response.json  two-inventory-response.json  two-job-template-response.json  two-organization-response.json
(+2 files in other folders)
